feat: onepage style

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -58,31 +58,51 @@
 </head>
 <body>
 <header>
-  <h1 class="artist-name"><a href="/">Guillaume Beaulieu</a></h1>
-  <div class="interaction-wrapper">
-    <div class="social-shortcuts">
-      <a href="https://www.instagram.com/guillaume_beaulieu_recorder/" target="_blank" rel="noopener" alt="instagram-profile">
-        <img src="/assets/img/logo/instagram.svg" alt="Instagram logo">
-      </a>
-      <a href="https://www.youtube.com/@GuillaumeBeaulieuRecorder" target="_blank" rel="noopener" alt="youtube-account">
-        <img src="/assets/img/logo/youtube.svg" alt="YouTube logo">
-      </a>
-      <a href="https://www.facebook.com/guillaume.beaulieu.73" target="_blank" rel="noopener" alt="facebook-profile">
-        <img src="/assets/img/logo/facebook.svg" alt="Facebook logo">
-      </a>
-    </div>
-  </div>
+  <h1>Valentine Dondon</h1>
+  <h2>Actrice & Comédienne</h2>
+  <nav>
+    <a id="nav-about">À propos</a>
+    <a id="nav-book">Gallerie</a>
+    <a id="nav-contact">Contact</a>
+  </nav>
 </header>
-<main>
+<main id="page-content">
+  <section class="image">
+    <img src="./assets/img/photos/header.webp">
+  </section>
+  <section id="about" class="about">
+    <h3>À propos de moi</h3>
+    <p>Je m'appelle Valentine Dondon, et je suis une jeune actrice passionnée par l'art de raconter des histoires à travers le jeu. Formée au théâtre et au cinéma, j'ai eu l'opportunité de jouer des rôles très variés, allant de personnages dramatiques intenses à des figures plus légères et comiques. J'aime explorer des univers différents et me plonger dans des personnages aux émotions complexes.</p>
+    <p>Ce qui me motive, c'est l'opportunité d'incarner des histoires authentiques, de travailler en équipe et de toujours repousser mes limites pour donner vie à des personnages touchants et sincères. Que ce soit sur scène ou devant la caméra, je m'investis pleinement dans chaque projet pour offrir une performance qui résonne avec le public.</p>
+    <p>Je suis actuellement à la recherche de nouveaux défis et de collaborations créatives, que ce soit pour des projets de cinéma, de télévision ou de théâtre. Si mon profil vous intéresse, n’hésitez pas à me contacter. Je serais ravie d’échanger sur vos projets et de voir comment je pourrais y apporter ma touche personnelle.</p>
+    <p>Je suis à votre disposition pour toute rencontre ou audition, n'hésitez pas à cet égard de me contacter directement pour discuter de vos projets futurs.</p>
+  </section>
+  <section id="book" class="book">
+    <h3>Gallerie</h3>
+    <div id="gallery" class="gallery-container">
+      <img src="./assets/img/photos/vd5.webp">
+      <img src="./assets/img/photos/vd2.webp" class="portrait">
+      <img src="./assets/img/photos/vd1.webp">
+      <img src="./assets/img/photos/vd3.webp">
+      <img src="./assets/img/photos/vd7.webp">
+      <img src="./assets/img/photos/vd4.webp" class="portrait">
+      <img src="./assets/img/photos/vd6.webp" class="portrait">
+      <img src="./assets/img/photos/vd8.webp" class="portrait">
+      <img src="./assets/img/photos/vd9.webp">
+      <img src="./assets/img/photos/vd11.webp">
+      <img src="./assets/img/photos/vd10.webp">
+    </div>
+  </section>
+  <section id="contact" class="contact">
+    <h3>Me contacter</h3>
+    <p>Vous pouvez me contacter par mail à l'adresse suivante ou me retrouver sur les réseaux suivants, à très vite!</p>
+    <a href="mailto:valentine.dondon@gmail.com" alt="mail-contact">valentine.dondon[at]gmail.com</a>
+    <div class="socials-container">
+      <a href="https://www.instagram.com/messebasseproduction/" target="_blank" rel="noopener noreferrer" alt="instagram-link"><img src="./assets/img/logo/instagram.svg"></a>
+    </div>
+    <span id="info-modal">© 2024</span>
+  </section>
 </main>
-<footer>
-  <a href="https://messe-basse-production.com" target="_blank" rel="noreferrer noopener">
-    <img src="/assets/img/logo/mbp-text-white.png">
-  </a>
-  <span id="info-modal">
-    <p>© 2024</p>
-  </span>
-</footer>
 <div id="loading-overlay" class="loading-overlay"></div>
 <div id="modal-overlay" class="modal-overlay"></div>
 <script type="text/javascript" src="./assets/lib/ScrollBar.bundle.js"></script>
