feat: improve SEO

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -25,9 +25,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
   <link rel="manifest" href="./assets/img/favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileColor" content="#758C78">
   <meta name="msapplication-TileImage" content="./assets/img/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#FFFFFF">
+  <meta name="theme-color" content="#758C78">
   <!-- Open graph metas -->
   <meta property="og:title" content="Valentine Dondon"/>
   <meta property="og:url" content="https://valentinedondon.fr/"/>
@@ -79,6 +79,13 @@
   </section>
   <section id="book" class="book">
     <h3>Gallerie</h3>
+    <div class="bw-switch-container">
+      <p>Voir les photos en noir et blanc</p>
+      <div class="switch-wrapper">
+        <input id="bw-switch" class="switch" type="checkbox" name="bw-switch-checkbox">
+      </div>
+    </div>
+    <p></p>
     <div id="gallery" class="gallery-container">
       <img src="./assets/img/photos/vd5.webp">
       <img src="./assets/img/photos/vd2.webp" class="portrait">
