feat: update photos and txt content

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -72,10 +72,10 @@
   </section>
   <section id="about" class="about">
     <h3>À propos de moi</h3>
-    <p>Je m'appelle Valentine Dondon, et je suis une jeune actrice passionnée par l'art de raconter des histoires à travers le jeu. Formée au théâtre et au cinéma, j'ai eu l'opportunité de jouer des rôles très variés, allant de personnages dramatiques intenses à des figures plus légères et comiques. J'aime explorer des univers différents et me plonger dans des personnages aux émotions complexes.</p>
+    <p>Je m'appelle Valentine Dondon et suis étudiante en première année de licence d'études théâtrales-Parcours théâtre avec la mineure Arts et Médias. Je suis passionnée par l'art de raconter des histoires à travers le jeu. Formée au théâtre, j'ai eu l'opportunité de jouer des rôles très variés, allant de personnages dramatiques à des figures plus légères et comiques. J'aime explorer des univers différents et me plonger dans des personnages aux émotions complexes.</p>
     <p>Ce qui me motive, c'est l'opportunité d'incarner des histoires authentiques, de travailler en équipe et de toujours repousser mes limites pour donner vie à des personnages touchants et sincères. Que ce soit sur scène ou devant la caméra, je m'investis pleinement dans chaque projet pour offrir une performance qui résonne avec le public.</p>
-    <p>Je suis actuellement à la recherche de nouveaux défis et de collaborations créatives, que ce soit pour des projets de cinéma, de télévision ou de théâtre. Si mon profil vous intéresse, n’hésitez pas à me contacter. Je serais ravie d’échanger sur vos projets et de voir comment je pourrais y apporter ma touche personnelle.</p>
-    <p>Je suis à votre disposition pour toute rencontre ou audition, n'hésitez pas à cet égard de me contacter directement pour discuter de vos projets futurs.</p>
+    <p>Je suis actuellement à la recherche de nouveaux défis et de collaborations créatives, que ce soit pour des projets de cinéma, de télévision ou de théâtre. Si mon profil vous intéresse, n’hésitez pas à me contacter. Je serais ravie d’échanger sur vos projets et d'y participer.</p>
+    <p>Je suis à votre disposition pour toute rencontre ou audition, n'hésitez pas à cet égard de me <a href="mailto:valentine.dondon@gmail.com" alt="mail-contact">contacter</a> directement pour discuter de vos projets futurs.</p>
   </section>
   <section id="book" class="book">
     <h3>Gallerie</h3>
