--- a/assets/html/slideshowmodal.html
+++ b/assets/html/slideshowmodal.html
@@ -1,9 +1,9 @@
 <div id="slideshow-modal" class="modal modal-slideshow">
   <p class="close-modal">&#215;</p>
   <div class="image-wrapper">
-    <span id="previous" class="previous"><</span>
+    <span id="previous" class="previous">&lsaquo;</span>
     <img src="#" id="slideshow-image">
     <div id="slide-selector" class="slide-selector"></div>
-    <span id="next" class="next">></span>
+    <span id="next" class="next">&rsaquo;</span>
   </div>
 </div>
