feat: add matomo analytics

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -41,20 +41,21 @@
   <meta name="twitter:title" content="Valentine Dondon"/>
   <meta name="twitter:description" content="Valentine Dondon est une jeune comédienne de la région parisienne."/>
   <meta name="twitter:image:src" content="./assets/img/logo-social.png"/>
-  <!-- Matomo 
+  <!-- Matomo -->
   <script>
     var _paq = window._paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function() {
       var u="//matomo.mycozy.space/";
       _paq.push(['setTrackerUrl', u+'matomo.php']);
-      _paq.push(['setSiteId', '41']);
+      _paq.push(['setSiteId', '42']);
       var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
       g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
     })();
   </script>
-   End Matomo Code -->
+  <!-- End Matomo Code -->
 </head>
 <body>
 <header>
