--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -60,7 +60,7 @@
 <body>
 <header>
   <h1>Valentine Dondon</h1>
-  <h2>Actrice & Comédienne</h2>
+  <h2>Étudiante en Théâtre</h2>
   <nav>
     <a id="nav-about">À propos</a>
     <a id="nav-book">Gallerie</a>
