--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -103,7 +103,7 @@
   </section>
   <section id="contact" class="contact">
     <h3>Me contacter</h3>
-    <p>Vous pouvez me contacter par mail à l'adresse suivante ou me retrouver sur les réseaux suivants, à très vite!</p>
+    <p>Vous pouvez me contacter par mail à l'adresse suivante :</p>
     <a href="mailto:valentine.dondon@gmail.com" alt="mail-contact">valentine.dondon[at]gmail.com</a>
     <span id="info-modal">© 2024</span>
   </section>
