feat: add copyright current year

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -105,7 +105,7 @@
     <h3>Me contacter</h3>
     <p>Vous pouvez me contacter par mail à l'adresse suivante :</p>
     <a href="mailto:valentine.dondon@gmail.com" alt="mail-contact">valentine.dondon[at]gmail.com</a>
-    <span id="info-modal">© 2024</span>
+    <span id="info-modal">© 2024 / <span id="copyright"><script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span></span>
   </section>
 </main>
 <div id="loading-overlay" class="loading-overlay"></div>
